# Hashing

./: .gitignore  CMakeLists.txt  README.md  build.sh
Results/: Chain_Hash_Mul.xls  Chain_Hash_std.xls
chain_hash/: CMakeLists.txt  chain_hash.cpp  chain_hash.h
cmake_utils/: macro.cmake
cuckoo_hash/: CMakeLists.txt  cuckoo_hash.cpp  cuckoo_hash.h  k_universal_hash.h  universal_hash.h
examples/: CMakeLists.txt  universal_hash.cpp
graph_hash/: CMakeLists.txt
main/: CMakeLists.txt  main.cpp
open_adr_hash/: CMakeLists.txt  open_adr_hash.cpp  open_adr_hash.h
perfect_hash/: CMakeLists.txt
performance/: CMakeLists.txt  dictionary.cpp  random_numbers.cpp
performance/Results/: Chain_Hash_Division.xls  Chain_Hash_K_Independent.xls  Chain_Hash_Universal.xls
tests/: CMakeLists.txt
tests/chain_hash/: CMakeLists.txt  chain_hash_div.cpp  chain_hash_k_ind.cpp  chain_hash_mul.cpp  chain_hash_std.cpp  chain_hash_unv.cpp
tests/cuckoo_hash/: CMakeLists.txt  cuckoo_hash.cpp
tests/open_adr_hash/: CMakeLists.txt  open_adr_hash_double.cpp  open_adr_hash_linear.cpp  open_adr_hash_quadratic.cpp
tests/perfect_hash/: CMakeLists.txt  perfect_hash.cpp
tests/test_utils/: CMakeLists.txt
tests/test_utils/include/: testing.h
tests/test_utils/src/: main.cpp
